--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,14 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev":"nodemon src/server.js",
-    "start":"node src/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "inngest": "^3.44.3",
     "mongoose": "^8.19.1"
   }
 }
