--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,13 @@
     "start": "node src/server.js"
   },
   "dependencies": {
+    "@clerk/express": "^1.7.41",
+    "@stream-io/node-sdk": "^0.7.26",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "inngest": "^3.44.3",
-    "mongoose": "^8.19.1"
+    "mongoose": "^8.19.1",
+    "stream-chat": "^9.26.1"
   }
 }
